[fix][css] The mobile layout wrapped.

--- a/static/css/attractionStyle.scss
+++ b/static/css/attractionStyle.scss
@@ -210,15 +210,16 @@ input[type="radio"] {
 
 // input[type="radio"]:checked + .radio-label {
 input[type="radio"]:checked {
-    background: teal;
+    background: $primary-color;
     border: 2px solid rgb(255, 255, 255);
 }
 
 .photo-submit {
     padding: 10px 20px;
-    width: 154px;
-    background: teal;
+    background: $primary-color;
     color: white;
+    min-width: 114px;
+    max-width: 116px;
     border-radius: $basic-border-radius;
     border: 5px;
 
